# cabin-demo-bins

./: .gitignore  BSP-TODO.md  CLAUDE.md  DESIGN.md  DEVICE_SETUP.md  DEVICE_SPEC.md  DEVICE_SPECS.md  README.md  ROADMAP.md  ROADMAP_VEHICLE_CHANNELS.md  SA8155_PORT_SPEC.md  SPEC.md  honda_customization.md  settings.gradle.kts  user-flows.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face_recognizer.cpp  face_recognizer.h  image_utils.cpp  image_utils.h  jni_bridge.cpp  pose_analyzer.cpp  pose_analyzer.h  v4l2_camera.cpp  v4l2_camera.h  yolo_utils.cpp  yolo_utils.h
app/src/main/res/drawable/: asimo_all_clear.xml  asimo_child_slouch.xml  asimo_distracted.xml  asimo_eating.xml  asimo_eyes_closed.xml  asimo_phone.xml  asimo_posture.xml  asimo_yawning.xml  bg_ai_scrim.xml  bg_bubble_tail.xml  bg_button.xml  bg_button_accent.xml  bg_button_green.xml  bg_button_surface.xml  bg_detection_label.xml  bg_input_field.xml  bg_mascot_label_pill.xml  bg_risk_pill.xml  bg_segmented_button.xml  bg_settings_panel.xml  bg_speech_bubble.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/layout/: activity_face_registration.xml  activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
scripts/: adb_e2e_test.sh  capture-logs.sh  convert_fp16.py  deploy.sh  generate_alert_matrix_pdf.py  mock_server.py  mock_server_test.py  parse-perf.sh  requirements.txt  vlm_launcher.py  vlm_server.py
(+138 files in other folders)
